<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="198dp"
        android:background="#BA85FB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        style="@style/CustomTextViewStyle"

        android:layout_width="76dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/profile_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/LastName1"
        style="@style/CustomTextViewStyle"

        android:layout_width="76dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/profile_lastname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/lastName2"
        style="@style/CustomTextViewStyle"
        android:layout_width="86dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"

        android:text="@string/profile_lastname2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LastName1" />

    <TextView
        android:id="@+id/phone"
        style="@style/CustomTextViewStyle"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/profile_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName2" />

    <View
        android:id="@+id/divider"
        android:layout_width="350dp"
        android:layout_height="0.5dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/LastName1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <View
        android:id="@+id/divider2"
        android:layout_width="350dp"
        android:layout_height="0.5dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/lastName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LastName1" />

    <View
        android:id="@+id/divider3"
        android:layout_width="350dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName2"
        app:layout_constraintVertical_bias="0.017" />

    <Button
        android:id="@+id/save"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:text="@string/profile_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.763" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:autofillHints="Nombre"
        android:inputType="text"
        android:text="@string/profile_name"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.53" />

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:autofillHints="Apellido1"
        android:inputType="text"
        android:text="@string/profile_lastname"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.6" />

    <EditText
        android:id="@+id/lastName2Input"

        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:autofillHints="Apellido2"
        android:inputType="text"
        android:text="@string/profile_lastname2"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:layout_constraintVertical_bias="0.78" />


    <!--    <android.support.v7.widget.CardView-->
    <!--        android:id="@+id/card_view_for_image"-->
    <!--        android:layout_margin="2dp"-->
    <!--        android:layout_width="200dp"-->
    <!--        android:layout_height="200dp"-->
    <!--        app:cardCornerRadius="100dp">-->

    <!--        <ImageView-->
    <!--            android:id="@+id/rounded_image_view"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:scaleType="centerCrop"-->
    <!--            android:src="@drawable/YOUR_PICTURE" />-->
    <!--        <ImageView-->
    <!--            android:id="@+id/imageView2"-->
    <!--            android:layout_width="150dp"-->
    <!--            android:layout_height="150dp"-->
    <!--            android:contentDescription="@string/profile_pic"-->
    <!--            android:scaleType="centerCrop"-->
    <!--            app:layout_constraintBottom_toBottomOf="@+id/view2"-->
    <!--            app:layout_constraintEnd_toEndOf="@+id/view2"-->
    <!--            app:layout_constraintHorizontal_bias="0.497"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toTopOf="parent"-->
    <!--            app:layout_constraintVertical_bias="0.571"-->
    <!--            tools:srcCompat="@drawable/rounded_profile_pic" />-->

    <!--    </android.support.v7.widget.CardView>-->

    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:autofillHints="Apellido"
        android:inputType="phone"
        android:text="@string/phone_number"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@android:color/darker_gray"
        app:cardCornerRadius="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground"
            tools:srcCompat="@drawable/ic_launcher_foreground" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

